upd css banner & footer

--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -3,6 +3,8 @@
     color: tomato;
     font-style: oblique;
     text-align: left;
+    padding-left: 30px;
+    text-decoration:underline tomato;
 
 }
 .Banner>span{
