--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,4 +2,8 @@
     text-align: center;
     text-decoration: underline;
     font-style: italic;
+    position: absolute;
+    bottom:0;
+    left: 0;
+    right: 0;
 }
