--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
     text-align: center;
     text-decoration: underline;
     font-style: italic;
-    position: absolute;
+    position: fixed;
     bottom:0;
     left: 0;
     right: 0;
